Fix home first section gap styling

--- a/src/app/features/home/home.component.scss
+++ b/src/app/features/home/home.component.scss
@@ -1,7 +1,7 @@
 section {
 
     &#first {
-        gap: 170px;
+      
         color: #000;
         background-color: #fff03e;
         background-image: url(/assets/img/1.png);
@@ -9,58 +9,67 @@ section {
         background-repeat: no-repeat;
         background-size: cover;
 
-        .address {
+        ::ng-deep app-container > div {
             display: flex;
             flex-direction: column;
-            gap: 4px;
+            gap: 170px;
 
-            >* {
-                font-size: 15px;
-                line-height: 15px;
-                letter-spacing: -0.04rem;
+            .address {
+                display: flex;
+                flex-direction: column;
+                gap: 4px;
+    
+                >* {
+                    font-size: 15px;
+                    line-height: 15px;
+                    letter-spacing: -0.04rem;
+                }
+    
             }
-
-        }
-
-        .description {
-            display: flex;
-            flex-direction: column;
-            align-items: flex-start;
-            font-size: 36px;
-            line-height: 36px;
-            gap: 40px;
-            text-transform: uppercase;
-
-            >span {
-                font-size: 32px;
-
+    
+            .description {
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
+                font-size: 36px;
+                line-height: 36px;
+                gap: 40px;
+                text-transform: uppercase;
+    
                 >span {
-                    font-size: 36px;
+                    font-size: 32px;
+    
+                    >span {
+                        font-size: 36px;
+                    }
+                }
+    
+            }
+    
+            span.profile {
+                font-size: 13px;
+            }
+    
+            button {
+                border-radius: 0;
+                border: 3px solid #000;
+                padding: 14px 45px;
+                font-size: 18px;
+                line-height: 16px;
+                text-transform: uppercase;
+                background: transparent;
+                transition: 325ms all ease-in-out;
+                cursor: pointer;
+                width: fit-content;
+    
+                &:hover {
+                    background: #000;
+                    color: #fff03e;
                 }
             }
-
         }
 
-        span.profile {
-            font-size: 13px;
-        }
-
-        button {
-            border-radius: 0;
-            border: 3px solid #000;
-            padding: 14px 45px;
-            font-size: 18px;
-            line-height: 16px;
-            text-transform: uppercase;
-            background: transparent;
-            transition: 325ms all ease-in-out;
-            cursor: pointer;
-
-            &:hover {
-                background: #000;
-                color: #fff03e;
-            }
-        }
+      
     }
 
     &#second {
